# EMG

./: .gitignore  CMakeLists.txt
cmake/: EMGConfig.cmake.in  EMGSources.cmake
examples/: ex_classification.cpp  ex_emg_active_classification.cpp  ex_emg_direction_classification.cpp  ex_mes_array.cpp  ex_myo_regression.cpp  ex_myoband.cpp  ex_myoelectric_signal.cpp
include/EMG/Classification/: EmgActiveClassifier.hpp  EmgActiveEnsClassifier.hpp  EmgDirClassifier.hpp  EnsembleRTClassifier.hpp  LinearDiscriminantAnalysis.hpp  RealTimeClassifier.hpp  RealTimeMultiClassifier.hpp
include/EMG/Core/: MesArray.hpp
include/EMG/EMG/: EmgDataCapture.hpp  EmgFeatures.hpp  MesArray.hpp  MyoelectricSignal.hpp
include/EMG/Regression/: EmgDirectMapping.hpp  RealTimeRegressor.hpp
include/EMG/SignalProcessing/: Rectifier.hpp  SignalProcessingFunctions.hpp  SignalProcessor.hpp  TeagerKaiserEnergyOperator.hpp
include/EMG/Utility/: EigenConversions.hpp  EmgDataCapture.hpp  Matrix.hpp  VirtualInput.hpp  logging_util.hpp
src/EMG/Classification/: EmgActiveClassifier.cpp  EmgActiveEnsClassifier.cpp  EmgDirClassifier.cpp  EnsembleRTClassifier.cpp  LinearDiscriminantAnalysis.cpp  RealTimeClassifier.cpp  RealTimeMultiClassifier.cpp
src/EMG/Core/: EmgDataCapture.cpp  EmgFeatures.cpp  MesArray.cpp  MyoelectricSignal.cpp
src/EMG/EMG/: EmgDataCapture.cpp  EmgDirectMapping.cpp  EmgFeatures.cpp  MesArray.cpp  MyoelectricSignal.cpp
src/EMG/Regression/: EmgDirectMapping.cpp  RealTimeRegressor.cpp
src/EMG/SignalProcessing/: Rectifier.cpp  TeagerKaiserEnergyOperator.cpp
src/EMG/Utility/: EigenConversions.cpp  EmgDataCapture.cpp  EmgFeatures.cpp  Matrix.cpp  VirtualInput.cpp  logging_util.cpp
